apps/traefik/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik-api
      port: 8080
      targetPort: 8080
      nodePort: 30880
  type: NodePort
